# COMP2212

./: .gitignore  1.tsl  CHANGELOG.md  COMP2212.cabal  Eval.hs  Makefile  README.md  TileGrammar.hs  TileGrammar.info  TileGrammar.y  TileTokens.hs  TileTokens.x  Tsl.hs  example.tsl  group.txt  out1.tl  pr1.tsl  pr10.tsl  pr2.tsl  pr3.tsl  pr4.tsl  pr5.tsl  pr6.tsl  pr7.tsl  pr8.tsl  pr9.tsl  q1.tsl  q3.tsl  q5.tsl  resultt1.tl  test.tsl  testmake  tile2.tl  tmp.hs
automarker/: auto
automarker/pr1/: pr1.tsl
automarker/pr1/expected/: out1.tl
automarker/pr7/: pr7.tsl
automarker/pr8/: pr8.tsl
automarker/pr9/: pr9.tsl
automarker/pr9/outputs/: out1.tl
syntax-highlight-extension/: CHANGELOG.md  LICENSE  README.md  language-configuration.json  package.json  tsl-highlight-0.0.1.vsix  tsl-highlight-0.0.2.vsix  vsc-extension-quickstart.md
syntax-highlight-extension/syntaxes/: tsl.tmLanguage.json
