cabal-version:      2.4
name:               COMP2212
version:            0.1.0.0

-- A short (one-line) description of the package.
-- synopsis: COMP2212 Domain Specific language.

-- A longer description of the package.
-- description:

-- A URL where users can report bugs.
-- bug-reports: i@paji.uk

-- The license under which the package is released.
-- license: 

-- The package author(s).
-- author:

-- An email address to which users can send suggestions, bug reports, and patches.
-- maintainer:

-- A copyright notice.
-- copyright:
-- category:
extra-source-files:
    CHANGELOG.md
    README.md

executable Tsl
    main-is:          Main.hs

    -- Modules included in this executable, other than Main.
    other-modules:    TileTokens
		      ,TileGrammar

    -- LANGUAGE extensions used by modules in this package.
    -- other-extensions:
    build-depends:    base ^>=4.16.3.0
    -- hs-source-dirs:   app
    default-language: Haskell2010
    build-tools: happy,alex
